--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+REQUIREMENTS FOR OUR PROJECT (Maria is the original author)
+
 Tell a story use 1 of the following:
 	• custom "creative" D3.js project (nonstandard graph or chart)
 	• web scraping and Leaflet or Plotly
