--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Tell a story use 1 of the following:
 	• "thick" sever that performs multiple manipulations on data in a database prior to visualization (MUST BE APPROVED)
 We need to use:
 	• D3 interactive visualizations 
-	• Python flask - use 1:
+	• Python flask - use all:
 		○ API
 		○ HTML/CSS,
 		○ Javascript
